# ChangeLog of Nadoka($Rev$)
# $Id$ 
#
2004-07-19(Mon) 22:10:05 +0900  Koichi Sasada  <ko1@atdot.net>

	* 0.6.1 releaseds

	* ndk_version.rb : 0.6.2


2004-07-19(Mon) 21:52:27 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : TimerIntervalSec to 60


2004-07-19(Mon) 21:40:17 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : fix time thread timing

	* ndk_manager.rb : fix SIGINT hook

	* ndk_version.rb : remove debug code


2004-07-19(Mon) 21:00:21 +0900  Koichi Sasada  <ko1@atdot.net>

	* 0.6.0 released

	* ndk_version.rb : 0.6.1


2004-07-19(Mon) 20:59:11 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/mailcheck.nb : updated from
	http://cvs.sourceforge.jp/cgi-bin/viewcvs.cgi/ruexli/nadoka-plugins/


2004-07-19(Mon) 19:50:40 +0900  Koichi Sasada  <ko1@atdot.net>

	* rice/irc.rb : support long nick

	* ndk_manager.rb : fix time event invoke timing

	* ndk_logger.rb(slog, clog, write_log) : add nostamp option

	* plugins/timestampbot.nb


2004-07-17(Sat) 00:06:54 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : fix char code bugs

	* ndk_manager.rb : trap SIGINT to quit program

	* ndk_client.rb : add exception hook to protect unexpected
	disconnect


2004-07-14(Wed) 04:29:47 +0900  Koichi Sasada  <ko1@atdot.net>

	* ToDo : removed

	* README : fix url


2004-07-14(Wed) 04:27:53 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : fix exception handling


2004-07-14(Wed) 04:03:27 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_config.rb : add DefaultBotFiles

	* ndk_config.rb : ch_config(ch, key) is added

	* ndk_config.rb(make_bot_instance) : logging message to bot_state

	* ndk_manager.rb : fix error recovery process(set @connected to false)

	* plugins/backlogbot.nb : fix some bugs
	(user to user messages and so on)

	* plugins/weba.nb : fix configuration example's bug


2004-07-12(Mon) 16:51:24 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_version.rb : add rev to version string if this in trunk

